<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>net.focik</groupId>
    <artifactId>progasoffice</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>ProgasOffice</name>
    <description>Demo project</description>
    <properties>
        <java.version>21</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.javamoney</groupId>
            <artifactId>moneta</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.12.5</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.15.2</version> <!-- Użyj odpowiedniej wersji zależnej od wersji Jacksona w projekcie -->
        </dependency>

        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <!--                    <version>12.6.2.jre11</version>-->
            <version>8.2.1.jre11</version>
            <!--			<scope>runtime</scope>-->
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.10.4</version>
        </dependency>
        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>2.3.5</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>

        <!--<?xml version="1.0" encoding="UTF-8"?>-->
        <!--<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
        <!--	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">-->
        <!--	<modelVersion>4.0.0</modelVersion>-->
        <!--	<parent>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-parent</artifactId>-->
        <!--		<version>3.2.4</version>-->
        <!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
        <!--	</parent>-->
        <!--	<groupId>focik.net</groupId>-->
        <!--	<artifactId>progasoffice</artifactId>-->
        <!--	<version>0.0.1-SNAPSHOT</version>-->
        <!--	<name>progasoffice</name>-->
        <!--	<description>Demo project for Spring Boot</description>-->
        <!--	<properties>-->
        <!--		<java.version>17</java.version>-->
        <!--	</properties>-->
        <!--	<dependencies>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.security</groupId>-->
        <!--			<artifactId>spring-security-web</artifactId>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.security</groupId>-->
        <!--			<artifactId>spring-security-config</artifactId>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-starter-web</artifactId>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-starter-data-jdbc</artifactId>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>com.microsoft.sqlserver</groupId>-->
        <!--			<artifactId>mssql-jdbc</artifactId>-->
        <!--			<scope>runtime</scope>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.projectlombok</groupId>-->
        <!--			<artifactId>lombok</artifactId>-->
        <!--			<optional>true</optional>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-starter-test</artifactId>-->
        <!--			<scope>test</scope>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.security</groupId>-->
        <!--			<artifactId>spring-security-test</artifactId>-->
        <!--			<scope>test</scope>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>com.microsoft.sqlserver</groupId>-->
        <!--			<artifactId>mssql-jdbc</artifactId>-->
        <!--			<version>8.2.1.jre11</version>-->
        <!--			&lt;!&ndash;			<scope>runtime</scope>&ndash;&gt;-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>com.auth0</groupId>-->
        <!--			<artifactId>java-jwt</artifactId>-->
        <!--			<version>3.18.3</version>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>com.google.code.gson</groupId>-->
        <!--			<artifactId>gson</artifactId>-->
        <!--			<version>2.8.9</version>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.apache.commons</groupId>-->
        <!--			<artifactId>commons-lang3</artifactId>-->
        <!--			<version>3.12.0</version>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>io.vavr</groupId>-->
        <!--			<artifactId>vavr</artifactId>-->
        <!--			<version>0.10.4</version>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>org.modelmapper</groupId>-->
        <!--			<artifactId>modelmapper</artifactId>-->
        <!--			<version>2.3.5</version>-->
        <!--		</dependency>-->
        <!--	</dependencies>-->

        <!--	<build>-->
        <!--		<plugins>-->
        <!--			<plugin>-->
        <!--				<groupId>org.springframework.boot</groupId>-->
        <!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
        <!--				<configuration>-->
        <!--					<excludes>-->
        <!--						<exclude>-->
        <!--							<groupId>org.projectlombok</groupId>-->
        <!--							<artifactId>lombok</artifactId>-->
        <!--						</exclude>-->
        <!--					</excludes>-->
        <!--				</configuration>-->
        <!--			</plugin>-->
        <!--		</plugins>-->
        <!--	</build>-->

        <!--</project>-->
